  - Add log messages to Rules Engine (Isaac Martin, Michal Rutka, ORCJAVA-481)

Bug Fixes:

  - Update Vera implementation to use locale independent string case conversions (ORCJAVA-341)
  - Update X10 implementation to use locale independent string case conversions (ORCJAVA-342)
  - Update Russound implementation to use locale independent string case conversions (ORCJAVA-343)

Controller Pro 1.1.1
====================

Bug Fixes:

  - Fixed: RRD4J Protocol commands that change the start or end time of a graph also
	  cause the end or start time respectively to be fixed (Richard Turner, ORCJAVA-451)
  - Fixed: Drools exception when executing rules after controller xml has been reloaded (ORCJAVA-407)
  - Decode request path segments (Christian Bauer, ORCJAVA-471)
  - Update version of Restlet library used (fixed bug in Restlet thread management, ORCJAVA-476)
  - Add more logging information on connection failure
    when retrieving controller identity (ORCJAVA-459)
  - Fixed: Issue parsing empty strings in status values by Vera protocol (ORCJAVA-489)

Controller Pro 1.1.0
====================

New Features:

  - Manage User Credentials in Controller. (Juha Lindfors, ORCJAVA-422)
  - Convert Beehive remote proxy service to blocking I/O (Marcus Redeker, ORCJAVA-411)
  - Clean up and consume input streams from HTTP connections
    in error cases to return connections to HTTP keep-alive
    pool (Juha Lindfors, ORCJAVA-454)

Bug Fixes:

  - Fix broken changes introduced to test suite in 
    mredeker/Controller_2_0_1_Beehive_Proxy branch, as 
    part of ORCJAVA-424  (Juha Lindfors, ORCJAVA-425)
  - Fix an issue with ORCJAVA-411 that used HTTP GET instead
    of HTTP POST for controller MAC address announcement -- 
    used when retrieving controller ID from a remote service
    (Juha Lindfors, ORCJAVA-450)

Controller Pro 1.0.14
=====================

Bug Fixes:

  - Fixed: Shell Execution Protocol does not destroy the spawned process (ORCJAVA-420)